--- a/SocialMedia.Core/SocialMedia.Core.csproj
+++ b/SocialMedia.Core/SocialMedia.Core.csproj
@@ -9,4 +9,8 @@
     <Folder Include="DTOs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
