JWT integration and firs deployed

--- a/SocialMedia.Api/appsettings.json
+++ b/SocialMedia.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SocialMedia;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SocialMedia;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-F8O8U26;Database=SocialMedia;User Id=sa; Password=lalosql"
   },
   "Logging": {
     "LogLevel": {
@@ -12,6 +13,11 @@
   "AllowedHosts": "*",
   "Pagination": {
     "DefaultPageSize": 10,
-    "DefaultPageNumber":  1
+    "DefaultPageNumber": 1
+  },
+  "Authentication": {
+    "SecretKey": "nkladSJDYEl675g5s54s2KDS9a",
+    "Issuer": "https://localhost:44337",
+    "Audience": "https://localhost:44337"
   }
 }
