Security and Register Users

--- a/SocialMedia.Api/appsettings.json
+++ b/SocialMedia.Api/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SocialMedia;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "DefaultConnection": "Server=DESKTOP-F8O8U26;Database=SocialMedia;User Id=sa; Password=lalosql"
+    "SqlServerConnection": "Server=DESKTOP-F8O8U26;Database=SocialMedia;User Id=sa; Password=lalosql",
+    //"SqlServerConnection": "Server=lalorobles-database.database.windows.net; Database=SocialMedia;User=usuarioazure;Password=l4l04zur3!;"
+    //"MariaDbConnection": "Server=my-aws-database.co7terpkgfxv.us-east-1.rds.amazonaws.com; Database=SocialMedia;User=admin;Password=lalosql.aws;"
   },
   "Logging": {
     "LogLevel": {
@@ -18,6 +20,7 @@
   "Authentication": {
     "SecretKey": "nkladSJDYEl675g5s54s2KDS9a",
     "Issuer": "https://localhost:44337",
-    "Audience": "https://localhost:44337"
+    "Audience": "https://localhost:44337",
+    "Expiration": "1"
   }
 }
